--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,24 @@
     <title>Pomodoro Clock</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- build:css css/style.min.css -->
     <link href="css/style.css" rel="stylesheet">
     <!-- /build -->
 </head>
 
 <body>
-    <h1>Pomodoro</h1>
-    <p class="settings">Session
-        <input type="number" class="settings" size="2" min="1" max="60" id="session-duration" name="session" value="25" /></p>
-    <p class="settings">Break
-        <input type="number" class="settings" size="2" min="5" max="20" id="break-duration" name="session" value='5' /></p><br>
-    <button id="start" onclick="startPomodoro(10)">start</button>
-
-    <div id="clock">00:00</div>
-
+    <div class="container-fluid">
+        <h1>Pomodoro</h1>
+        <div id="clock">00:00</div>
+    </div>
+    <div class="container-fluid ">
+        <div class="row center-block text-center">
+            <p class=""><span>Session</span><input type="number" class="settings" size="2" min="1" max="60" id="session-duration" name="session" value="25" /></p><br>
+            <p><span>Break</span><input type="number" class="settings" size="2" min="5" max="20" id="break-duration" name="session" value='5' /></p>
+            <button id="start" class="center btn btn-primary" onclick="startPomodoro(10)">start</button>
+        </div>
+    </div>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
     <!-- build:js js/twitch.min.js -->
     <script src="js/pomodoro.js" type="text/javascript"></script>
