--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,10 @@
             <button id="start" class="center btn btn-primary" onclick="startPomodoro(10)">start</button>
         </div>
     </div>
+    <audio id="alarm-beep">
+        <source src="sound/alarm-beep.ogg" type="audio/ogg">
+        <source src="sound/alarm-beep.mp3" type="audio/mpeg">  
+    </audio>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
     <!-- build:js js/twitch.min.js -->
     <script src="js/pomodoro.js" type="text/javascript"></script>
