--- a/src/index.html
+++ b/src/index.html
@@ -5,32 +5,48 @@
     <title>Pomodoro Clock</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
     <!-- build:css css/style.min.css -->
     <link href="css/style.css" rel="stylesheet">
     <!-- /build -->
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <h1>Pomodoro</h1>
+        <div id="status">&nbsp;</div>
         <div id="clock">00:00</div>
     </div>
-    <div class="container-fluid ">
-        <div class="row center-block text-center">
-            <p class=""><span>Session</span><input type="number" class="settings" size="2" min="1" max="60" id="session-duration" name="session" value="25" /></p><br>
-            <p><span>Break</span><input type="number" class="settings" size="2" min="5" max="20" id="break-duration" name="session" value='5' /></p>
-            <button id="start" class="center btn btn-primary" onclick="startPomodoro(10)">start</button>
+
+    <div class="container center-align">
+        <p class=""><span>Session</span></p>
+        <div class="row">
+            <div class="col s4 right-align"> <a class="btn-floating btn-small waves-effect waves-light color-pink"><i class="material-icons">+</i></a></div>
+            <div class="col s4"><input type="number" class="center-align settings" size="2" min="1" max="60" id="session-duration" name="session" value="25" /></div>
+            <div class="col s4 left-align"><a class="btn-floating btn-small waves-effect waves-light color-pink"><i class="material-icons">-</i></a></div>
         </div>
+        <p><span>Break</span></p>
+        <div class="row">
+        <div class="col s4 right-align"> <a class="btn-floating btn-small waves-effect waves-light color-pink"><i class="material-icons">+</i></a></div>
+            <div class="col s4"><input type="number" class="center-align settings" size="2" min="5" max="20" id="break-duration" name="session" value='5' /></div>
+         <div class="col s4 left-align"><a class="btn-floating btn-small waves-effect waves-light color-pink"><i class="material-icons">-</i></a></div>
+        </div>        
+        <button id="start" class="waves-effect waves-light btn-large color-pink" onclick="startPomodoro(10)">start</button>
     </div>
+
     <audio id="alarm-beep">
         <source src="sound/alarm-beep.ogg" type="audio/ogg">
         <source src="sound/alarm-beep.mp3" type="audio/mpeg">  
     </audio>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
-    <!-- build:js js/twitch.min.js -->
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- build:js js/pomodoro.min.js -->
     <script src="js/pomodoro.js" type="text/javascript"></script>
     <!-- /build -->
+    
 </body>
 
 </html>
