--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,13 @@
         <h1>Pomodoro</h1>
         <div id="status">&nbsp;</div>
         <div id="clock">00:00</div>
+        <div class="row">
+            <div class="col s4 offset-s4">
+                <div class="progress">
+                    <div id="progress-bar" class="determinate" style="width: 0%"></div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="container center-align">
@@ -28,10 +35,10 @@
         </div>
         <p><span>Break</span></p>
         <div class="row">
-        <div class="col s4 right-align"> <a class="btn-floating btn-small waves-effect waves-light color-pink"><i class="material-icons">+</i></a></div>
+            <div class="col s4 right-align"> <a class="btn-floating btn-small waves-effect waves-light color-pink"><i class="material-icons">+</i></a></div>
             <div class="col s4"><input type="number" class="center-align settings" size="2" min="5" max="20" id="break-duration" name="session" value='5' /></div>
-         <div class="col s4 left-align"><a class="btn-floating btn-small waves-effect waves-light color-pink"><i class="material-icons">-</i></a></div>
-        </div>        
+            <div class="col s4 left-align"><a class="btn-floating btn-small waves-effect waves-light color-pink"><i class="material-icons">-</i></a></div>
+        </div>
         <button id="start" class="waves-effect waves-light btn-large color-pink" onclick="startPomodoro(10)">start</button>
     </div>
 
@@ -46,7 +53,7 @@
     <!-- build:js js/pomodoro.min.js -->
     <script src="js/pomodoro.js" type="text/javascript"></script>
     <!-- /build -->
-    
+
 </body>
 
 </html>
