--- a/src/index.html
+++ b/src/index.html
@@ -28,16 +28,16 @@
         <p class=""><span>Session</span></p>
         <div class="row">
             <div class="col s4 m1 offset-m4 right-align"> <a class="btn-floating btn-small waves-effect waves-light color-pink"><i class="material-icons">+</i></a></div>
-            <div class="col s4 m2 center-align"><input type="number" class="center-align settings" size="2" min="1" max="60" id="session-duration" name="session" value="10" /></div>
+            <div class="col s4 m2 center-align"><input id="session-duration" type="number" class="center-align settings" size="2" min="1" max="60" name="session" value="10" /></div>
             <div class="col s4 m1 left-align"><a class="btn-floating btn-small waves-effect waves-light color-pink"><i class="material-icons">-</i></a></div>
         </div>
         <p><span>Break</span></p>
         <div class="row">
             <div class="col s4 m1 offset-m4 right-align"> <a class="btn-floating btn-small waves-effect waves-light color-pink"><i class="material-icons">+</i></a></div>
-            <div class="col s4 m2 center-align"><input type="number" class="center-align settings" size="2" min="5" max="20" id="break-duration" name="session" value='5' /></div>
+            <div class="col s4 m2 center-align"><input id="break-duration" type="number" class="center-align settings" size="2" min="5" max="20"  name="session" value='5' /></div>
             <div class="col s4 m1 left-align"><a class="btn-floating btn-small waves-effect waves-light color-pink"><i class="material-icons">-</i></a></div>
         </div>
-        <button id="start" class="waves-effect waves-light btn-large color-pink" onclick="startPomodoro()">start</button>
+        <button id="start" class="btn-large color-pink" onclick="startPomodoro()">start</button>
     </div>
     <audio id="alarm-beep">
         <source src="sound/alarm-beep.ogg" type="audio/ogg">
